--- a/13154e32980e9f216f7108dc3aff6feea3403a93/classroom.html
+++ b/13154e32980e9f216f7108dc3aff6feea3403a93/classroom.html
@@ -21,6 +21,7 @@
     <main>
 
         <h1>Classroom Environment</h1>
+        <p>Students names have been redacted to protect student privacy.</p><br>
         <div>
             <h2 class="about">2a. Creating an Environment of Respect and Rapport</h2>
             <p class="about"> An essential skill of teaching is that of managing relationships with students and
@@ -150,7 +151,7 @@
         </div>
         <div class="grid-container">
             <div class="grid-item images">
-                    <img src="" alt="Sensory Bin">
+                    <img src="./images/Sensory%20Bin.jpg" alt="Sensory Bin" style="transform: rotate(90deg); overflow-y:visible; transform-origin: center; width: 75vh; height: 35vw;">
             </div>
 
             <div class="grid-item">
@@ -194,7 +195,8 @@
         </div>
         <div class="grid-container">
             <div class="grid-item images">
-                    <img src="" alt="Lab Setup">
+                    <img src="./images/Classroom Setup1.jpg" alt="Lab Setup">
+                    <img src="./images/Classroom Setup2.jpg" alt="Lab Setup">
             </div>
 
             <div class="grid-item">
@@ -221,7 +223,7 @@
     </main>
     <footer w3-include-html="/beccammyers.github.io/13154e32980e9f216f7108dc3aff6feea3403a93/footer.html"></footer>
 </body>
-<script src="/beccammyers.github.io/myers.github.io/scripts/currentdate.js"></script>
+<script src="/beccammyers.github.io/scripts/currentdate.js"></script>
 <script src="/beccammyers.github.io/scripts/hamburger.js"></script>
 <script src="/beccammyers.github.io/scripts/w3.js"></script>
 <script src="/beccammyers.github.io/scripts/wayfinding.js"></script>
