--- a/13154e32980e9f216f7108dc3aff6feea3403a93/health.html
+++ b/13154e32980e9f216f7108dc3aff6feea3403a93/health.html
@@ -1,9 +1,6 @@
 <!-- -----------------------------TO ADD A PDF - COPY AND PASTE THE FOLLOWING AND CHANGE THE SRC ATTRIBUTE-------------------------
-
+                <iframe src=""></iframe>
 -->
-
-
-
 <!DOCTYPE html>
 <html lang="en-us">
 
@@ -24,32 +21,47 @@
     <main>
 
         <h1>Health and Safety</h1>
+        <p>Students names have been redacted to protect student privacy.</p><br>
+
         <div>
             <h2 class="about">5a. Accesses, Uses, and Maintains Health and Safety Records</h2>
-            <p class="about"></p>
         </div>
+
         <div class="grid-container">
             <div class="grid-item">
-                    <iframe src="./files/Child%20Record%20Summary%20Template.pdf"></iframe>
+                <iframe src="./files/Child%20Record%20Summary%20Template.pdf"></iframe>
             </div>
 
             <div class="grid-item">
-                <p><strong>Document Description: </strong></p>
+                <p><strong>Document Description: </strong>At the beginning of preschool lab, the other teachers and I
+                    gathered different health and safety records, such as proof of immunizations, insurance information,
+                    and consent forms for each of the children in the lab. These documents are required for each child
+                    to participate in lab and helped us ensure that we had the proper legal documentation for their
+                    participation and to help keep everyone safe. This document is a template of the one we used to
+                    record what documents we had for each child and demonstrates my understanding of how important it is
+                    to have a list of health and safety information.</p>
             </div>
 
 
             <div class="grid-item">
-                <p><strong>Document Description: </strong></p>
+                <p><strong>Document Description: </strong>While in my family and community relationships class, I
+                    learned how to properly store confidential items, such as health and safety information and
+                    educational records, behind at least two locks. While in toddler and preschool lab, I practiced this
+                    as we kept a bin of health records and other child information behind two locked doors in our
+                    classroom. Each day in lab, I had to make sure the records were never left alone in the open, and
+                    that when I left for the day, they were locked in the closet with the classroom door locked. This
+                    shows that I understand the laws that are in effect to protect people’s privacy. </p>
             </div>
 
-            <div class="grid-item">
+            <div class="grid-item images">
+                <img src="./images/Door%20Lock.jpg" alt="Door Lock"
+                    style="transform: rotate(90deg); overflow-y:visible; transform-origin: center; width: 75vh; height: 35vw;">
             </div>
         </div>
 
         <div>
             <h2 class="about">5b. Responsive to Policy and Procedures to Prevent & Respond to Health, Safety, &
                 Nutrition</h2>
-            <p class="about"></p>
         </div>
         <div class="grid-container">
             <div class="grid-item images">
@@ -57,78 +69,80 @@
             </div>
 
             <div class="grid-item">
-                <p><strong>Document Description: </strong></p>
-            </div>
-
-
-            <div class="grid-item">
-                <p><strong>Document Description: </strong></p>
-            </div>
-
-            <div class="grid-item">
+                <p><strong>Document Description: </strong>While in toddler and preschool lab, I read the BYU-Idaho Child
+                    Labs Student Handbook. I implemented the policies and procedures outlined in the handbook while in
+                    both labs. Some of these procedures included diapering and other safety procedures, expectations for
+                    student professionalism, and confidentiality policies. I learned that it is important to have
+                    procedures and policies in place not only to protect the children I worked with, but myself and the
+                    other teachers in my lab. </p>
             </div>
         </div>
 
         <div>
             <h2 class="about">5c. Training and Collaboration of Staff</h2>
-            <p class="about"></p>
         </div>
         <div class="grid-container">
-            <div class="grid-item">
+            <div class="grid-item images">
+                <img src="./images/CPR%20Card.jpg" alt="CPR Card">
             </div>
 
             <div class="grid-item">
-                <p><strong>Document Description: </strong></p>
-            </div>
-
-
-            <div class="grid-item">
-                <p><strong>Document Description: </strong></p>
-            </div>
-
-            <div class="grid-item">
+                <p><strong>Document Description: </strong>Before working with children in the preschool and toddler
+                    labs, I received special training on first aid and CPR. I learned how to respond to a variety of
+                    emergency situations, including simple cuts and bruises along with more severe situations, such as
+                    shock or lacerations. Luckily, I didn’t have to use this training for anything more than bruises and
+                    simple scrapes, but I have the training should I ever need to use it. </p>
             </div>
         </div>
 
         <div>
             <h2 class="about">5d. Connects Families with Community Resources</h2>
-            <p class="about"></p>
         </div>
         <div class="grid-container">
             <div class="grid-item">
-                    <iframe src="./files/Resource%20Plan.pdf"></iframe>
+                <iframe src="./files/Resource%20Plan.pdf"></iframe>
             </div>
 
             <div class="grid-item">
-                <p><strong>Document Description: </strong></p>
-            </div>
-
-
-            <div class="grid-item">
-                <p><strong>Document Description: </strong></p>
-            </div>
-
-            <div class="grid-item">
+                <p><strong>Document Description: </strong>During my Intervention with Infants class, I wrote a resource
+                    plan with a partner. The parents I worked with expressed their concerns, and then my partner and I
+                    created a list of resources available to help them address the concerns. During an intervention
+                    session, we explained the resources we found. I learned that it can sometimes be a daunting task to
+                    sift through all the information available online, especially for parents who don’t know where to
+                    start looking for ideas to help their child. That’s why it’s important for professionals to help
+                    parents by giving them a few resources that they can use to help find more.</p>
             </div>
         </div>
 
         <div>
             <h2 class="about">5e. Individualized and Group Nutritional, Physical, and Medical Needs</h2>
-            <p class="about"></p>
         </div>
         <div class="grid-container">
             <div class="grid-item images">
                 <img src="./images/Epipen.jpg" alt="Epi Pen">
-                <p><strong>Photo Credit: </strong>EpiPen auto-injection epinephrine pens manufactured by Mylan NV pharmaceutical company for use by severe allergy sufferers are seen in Washington, U.S. August 24, 2016. REUTERS/Jim Bourg/File Photo</p>
+                <p><strong>Photo Credit: </strong>EpiPen auto-injection epinephrine pens manufactured by Mylan NV
+                    pharmaceutical company for use by severe allergy sufferers are seen in Washington, U.S. August 24,
+                    2016. REUTERS/Jim Bourg/File Photo</p>
             </div>
 
             <div class="grid-item">
-                <p><strong>Document Description: </strong></p>
+                <p><strong>Document Description: </strong>One of the children in my toddler lab was very allergic to
+                    peanuts. His mother trained us on how to use an Epi-Pen just in case he was to have a reaction
+                    during lab. The other teachers and I had to make sure that we didn’t eat anything with peanuts the
+                    days we had lab, and we also made sure that the other parents were aware and could make sure their
+                    children didn’t come into lab with peanut butter on their clothes or bodies. I learned that it is
+                    very important to make sure everyone involved is aware of the situation and trained to help in case
+                    of an emergency.</p>
             </div>
 
 
             <div class="grid-item">
-                <p><strong>Document Description: </strong></p>
+                <p><strong>Document Description: </strong>While in preschool lab, I prepared snacks for the children
+                    several times during the semester. I learned the nutritional needs children have and how to
+                    appropriately portion servings. This is a picture of the snack schedule. If the items listed for
+                    snack that day weren’t available, I learned how to make appropriate substitutions. This shows that I
+                    am capable of preparing and serving children nutritional food that is good for their development.
+                </p>
             </div>
 
             <div class="grid-item images">
@@ -138,28 +152,39 @@
 
         <div>
             <h2 class="about">5f. Medical & Other Conditions, Special Needs</h2>
-            <p class="about"></p>
         </div>
         <div class="grid-container">
             <div class="grid-item">
+                <iframe src="./files/Application%20Activity%202.pdf"></iframe>
             </div>
 
             <div class="grid-item">
-                <p><strong>Document Description: </strong></p>
+                <p><strong>Document Description: </strong>Over the last three years, I volunteered at the Helping Hands
+                    and Life Skills classes held on campus for adults with disabilities. Every week we did crafts and
+                    other games or learned basic skills, such as writing letters. I got to know some of the people
+                    really well and had a wonderful experience working with adults who have disabilities such as Down
+                    syndrome and cerebral palsy. This is a reflection I wrote for my Family and Community Relationships
+                    class about my experiences volunteering. This shows that I have experience working with a variety of
+                    ages, not just children.</p>
             </div>
 
 
             <div class="grid-item">
-                <p><strong>Document Description: </strong></p>
+                <p><strong>Document Description: </strong>While in toddler lab, I worked with a child who was born with
+                    the lower part of her leg missing. The occupational therapist trained all of the teachers in my lab
+                    on how to help her successfully crawl around the room. In addition, we planned activities and room
+                    design so that she could access all the activities with minimal assistance. This experience taught
+                    me how to accommodate for physical disabilities and shows that I am willing to make changes to fit
+                    the needs of my specific students.</p>
             </div>
 
-            <div class="grid-item">
+            <div class="grid-item images">
+                <img src="./images/Wheelchair.png" alt="Wheelchair">
             </div>
         </div>
 
         <div>
             <h2 class="about">5g. Emergency Procedures, Abuse Prevention and Reporting</h2>
-            <p class="about"></p>
         </div>
         <div class="grid-container">
             <div class="grid-item images">
@@ -167,35 +192,44 @@
             </div>
 
             <div class="grid-item">
-                <p><strong>Document Description: </strong></p>
+                <p><strong>Document Description: </strong>During my preschool and toddler lab experiences, we learned
+                    procedures for emergencies such as fire alarms, earthquakes, and active shooters. We practiced the
+                    procedures for fire drills with the children every month so that everyone was familiar with the plan
+                    and knew what to do in case there was a real emergency. This shows that I am prepared to learn
+                    proper procedures for keeping the children in my care safe.</p>
             </div>
 
 
             <div class="grid-item">
-                <p><strong>Document Description: </strong></p>
+                <p><strong>Document Description: </strong>Before working with the children in toddler lab, I took a
+                    short course on abuse recognition and prevention called Stewards of Children. I learned signs of
+                    emotional and physical abuse and how to gather more information without leading children to give
+                    specific answers. I also learned how to properly report it to my superiors and Child Welfare. This
+                    is the booklet we used during the training, showing that I am capable of keeping the children I work
+                    with safe by recognizing possible signs of abuse. </p>
             </div>
 
             <div class="grid-item images">
-                <img src="./images/Stewards%20of%20Children.jpg" alt="Stewards Of Children" style="transform: rotate(90deg); overflow-y:visible; transform-origin: center; width: 75vh; height: 35vw;">
+                <img src="./images/Stewards%20of%20Children.jpg" alt="Stewards Of Children"
+                    style="transform: rotate(90deg); overflow-y:visible; transform-origin: center; width: 75vh; height: 35vw;">
             </div>
         </div>
 
         <div>
             <h2 class="about">5h. Infectious/Communicable Disease</h2>
-            <p class="about"></p>
         </div>
-        <div class="grid-container">            
+        <div class="grid-container">
             <div class="grid-item images">
                 <img src="./images/Snack%20Aprons.jpg" alt="Snack Aprons">
             </div>
 
             <div class="grid-item">
-                <p><strong>Document Description: </strong></p>
+                <p><strong>Document Description: </strong>While in preschool lab, I was trained on how to properly prepare food for snack time.  I learned the procedures for washing my hands, preparing food, and cleaning up to avoid contaminating food and dishes.  These procedures consisted of wearing a special apron, wearing gloves, and washing dishes properly.  This helped me keep myself, the children in my lab, and those in other labs safe.  This shows that I understand procedures for working with food and can implement them to keep disease or infections from spreading.</p>
             </div>
 
 
             <div class="grid-item">
-                <p><strong>Document Description: </strong></p>
+                <p><strong>Document Description: </strong>While in toddler lab, there was a child who had special needs and would sometimes vomit when nervous or excited.  The other teachers in the lab and I always carried certain black cloths that are specifically designated to clean up bodily fluids so there isn’t contamination.  Several times in lab, this child vomited, and we put a black cloth covering it to keep the children away while we got our cleaning supplies.  I learned that it is important for everyone to understand proper procedures for preventing illnesses and diseases from spreading, because it is easy to contaminate items.</p>
             </div>
 
             <div class="grid-item images">
@@ -206,7 +240,7 @@
     </main>
     <footer w3-include-html="/beccammyers.github.io/13154e32980e9f216f7108dc3aff6feea3403a93/footer.html"></footer>
 </body>
-<script src="/beccammyers.github.io/myers.github.io/scripts/currentdate.js"></script>
+<script src="/beccammyers.github.io/scripts/currentdate.js"></script>
 <script src="/beccammyers.github.io/scripts/hamburger.js"></script>
 <script src="/beccammyers.github.io/scripts/w3.js"></script>
 <script src="/beccammyers.github.io/scripts/wayfinding.js"></script>
