--- a/13154e32980e9f216f7108dc3aff6feea3403a93/instruction.html
+++ b/13154e32980e9f216f7108dc3aff6feea3403a93/instruction.html
@@ -1,9 +1,6 @@
 <!-- -----------------------------TO ADD A PDF - COPY AND PASTE THE FOLLOWING AND CHANGE THE SRC ATTRIBUTE-------------------------
-
+                <iframe src=""></iframe>
 -->
-
-
-
 <!DOCTYPE html>
 <html lang="en-us">
 
@@ -24,6 +21,7 @@
     <main>
 
         <h1>Instruction</h1>
+        <p>Students names have been redacted to protect student privacy.</p><br>
         <div>
             <h2 class="about">3a. Communicating with Students</h2>
             <p class="about"></p>
@@ -143,7 +141,7 @@
     </main>
     <footer w3-include-html="/beccammyers.github.io/13154e32980e9f216f7108dc3aff6feea3403a93/footer.html"></footer>
 </body>
-<script src="/beccammyers.github.io/myers.github.io/scripts/currentdate.js"></script>
+<script src="/beccammyers.github.io/scripts/currentdate.js"></script>
 <script src="/beccammyers.github.io/scripts/hamburger.js"></script>
 <script src="/beccammyers.github.io/scripts/w3.js"></script>
 <script src="/beccammyers.github.io/scripts/wayfinding.js"></script>
