--- a/13154e32980e9f216f7108dc3aff6feea3403a93/nav.html
+++ b/13154e32980e9f216f7108dc3aff6feea3403a93/nav.html
@@ -2,9 +2,9 @@
 <ul id="topnav" class="responsive">
     <li class="active"><a href="/beccammyers.github.io/13154e32980e9f216f7108dc3aff6feea3403a93/index.html">Home</a>
     </li>
-    <li><a href="./preparation.html">Planning &amp; Preparation</a></li>
-    <li><a href="./classroom.html">Classroom Environment</a></li>
-    <li><a href="./instruction.html">Instruction</a></li>
-    <li><a href="./responsibilities.html">Professional Responsibilities</a></li>
-    <li><a href="./health.html">Health &amp; Safety</a></li>
+    <li><a href="/beccammyers.github.io/13154e32980e9f216f7108dc3aff6feea3403a93/preparation.html">Planning &amp; Preparation</a></li>
+    <li><a href="/beccammyers.github.io/13154e32980e9f216f7108dc3aff6feea3403a93/classroom.html">Classroom Environment</a></li>
+    <li><a href="/beccammyers.github.io/13154e32980e9f216f7108dc3aff6feea3403a93/instruction.html">Instruction</a></li>
+    <li><a href="/beccammyers.github.io/13154e32980e9f216f7108dc3aff6feea3403a93/responsibilities.html">Professional Responsibilities</a></li>
+    <li><a href="/beccammyers.github.io/13154e32980e9f216f7108dc3aff6feea3403a93/health.html">Health &amp; Safety</a></li>
 </ul>
