--- a/13154e32980e9f216f7108dc3aff6feea3403a93/preparation.html
+++ b/13154e32980e9f216f7108dc3aff6feea3403a93/preparation.html
@@ -24,6 +24,7 @@
     <main>
 
         <h1>Planning and Preparation</h1>
+        <p>Students names have been redacted to protect student privacy.</p><br>
         <div>
             <h2 class="about">1a. Demonstrating Knowledge of Content and Pedagogy</h2>
             <p class="about">In order to guide student learning, teachers must have command of the subjects they teach.
@@ -286,7 +287,7 @@
     </main>
     <footer w3-include-html="/beccammyers.github.io/13154e32980e9f216f7108dc3aff6feea3403a93/footer.html"></footer>
 </body>
-<script src="/beccammyers.github.io/myers.github.io/scripts/currentdate.js"></script>
+<script src="/beccammyers.github.io/scripts/currentdate.js"></script>
 <script src="/beccammyers.github.io/scripts/hamburger.js"></script>
 <script src="/beccammyers.github.io/scripts/w3.js"></script>
 <script src="/beccammyers.github.io/scripts/wayfinding.js"></script>
