--- a/13154e32980e9f216f7108dc3aff6feea3403a93/responsibilities.html
+++ b/13154e32980e9f216f7108dc3aff6feea3403a93/responsibilities.html
@@ -1,9 +1,6 @@
 <!-- -----------------------------TO ADD A PDF - COPY AND PASTE THE FOLLOWING AND CHANGE THE SRC ATTRIBUTE-------------------------
-<iframe src="./files/"></iframe>
+                <iframe src=""></iframe>
 -->
-
-
-
 <!DOCTYPE html>
 <html lang="en-us">
 
@@ -24,6 +21,7 @@
     <main>
 
         <h1>Professional Responsibilities</h1>
+        <p>Students names have been redacted to protect student privacy.</p><br>
         <div>
             <h2 class="about">4a. Reflecting on Teaching</h2>
             <p class="about">Reflecting on teaching encompasses the teacher’s thinking that follows any instructional
@@ -83,7 +81,8 @@
         </div>
         <div class="grid-container">
             <div class="grid-item images">
-                <img src="" alt="Child Web">
+                <img src="./images/Child%20Web1.jpg" alt="Child Web">
+                <img src="./images/Child%20Web2.jpg" alt="Child Web" style="transform: rotate(270deg); overflow-y:visible; transform-origin: center; width: 75vh; height: 35vw;">
             </div>
 
             <div class="grid-item">
@@ -123,7 +122,8 @@
         </div>
         <div class="grid-container">
             <div class="grid-item images">
-                <img src="" alt="Relationships Graph">
+                <img src="./images/Relationships%20Graph.png" alt="Relationships Graph">
+                <p><small>*Graph Used with teacher permission</small></p>
             </div>
 
             <div class="grid-item">
@@ -282,7 +282,7 @@
     </main>
     <footer w3-include-html="/beccammyers.github.io/13154e32980e9f216f7108dc3aff6feea3403a93/footer.html"></footer>
 </body>
-<script src="/beccammyers.github.io/myers.github.io/scripts/currentdate.js"></script>
+<script src="/beccammyers.github.io/scripts/currentdate.js"></script>
 <script src="/beccammyers.github.io/scripts/hamburger.js"></script>
 <script src="/beccammyers.github.io/scripts/w3.js"></script>
 <script src="/beccammyers.github.io/scripts/wayfinding.js"></script>
